package gputop;

message DevInfo
{
    required uint32 devid = 1;
    required uint32 n_eus = 2;
    required uint32 n_eu_slices = 3;
    required uint32 n_eu_sub_slices = 4;
    required uint32 n_samplers = 5;
}

message PerfTraceDesc
{
    required uint32 oa_report_format = 1;
    required uint32 oa_metrics_set = 2;
}

message AddTrace
{
    required string name = 1;
    required int32 id = 2;
    oneof type {
	PerfTraceDesc perf_trace = 3;
    }
}

message Message
{
    oneof cmd {
	DevInfo devinfo = 1;
	AddTrace add_trace = 2;
    }
}


